istio/app-example/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: app-example
spec:
  replicas: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: app-example
  template:
    metadata:
      labels:
        app.kubernetes.io/name: app-example
    spec:
      containers:
        - name: nginx
          image: nginx:1.23
          ports:
            - name: http
              containerPort: 80
